--- a/Sparkify.ipynb
+++ b/Sparkify.ipynb
@@ -1677,6 +1677,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Given that the problem we are dealing with is binary classification type (predicting if a User with Churn or Stay) I would like to use the below set of  metrics to evaluate the performance of the different models.\n",
+    "\n",
+    "##### Accuracy \n",
+    "This is one of the simplest metric which is defined as number of    correct prediction divided by total number of predictions.\n",
+    "\n",
+    "##### Precision \n",
+    "Accuracy could not be a good indiccator in all cases. For Eg, in a imbalanced dataset where stayed users are more compared to churned, the accuracy can be high (the model predicts all users to be those who have stayed) but this does not represent true picture as the model just classifies all users as 'Stayed' and is not learning anything. Therefore we need a class specific metric. Precision is defined as TruePositive / (TruePositive + FalsePositive) which means when a model predict something positive, how many times they were actually positive.\n",
+    "\n",
+    "##### Recall\n",
+    "Similar to precision, recall is another class specific metric and is defined as TruePositive / (TruePositive + FalseNegative) which means out of actual positive data, how many times the model predicted correctly.\n",
+    "\n",
+    "##### F1-Score\n",
+    "Though i am planning to capture precision and recall separately, given the small data set it is good to evaluate the F1 score which is the harmonic mean of precision and recall.\n",
+    "\n",
+    "##### AUC-ROC\n",
+    "Area under the curve is a performance measurement which tells how much the model is capable of distinguising between Churn and Stay. Higher the AUC value, the model is good at predicting churned users as churned and stayed as stayed. It measures how well predictions are ranked, rather than their absolute values and also measures the quality of the model's predictions irrespective of what classification threshold is chosen."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
    "metadata": {},
@@ -2160,6 +2182,13 @@
    "metadata": {},
    "source": [
     "This is a great result for the model. with the parameters of numTrees = 100 and maxDepth = 30, the Random Forest Classifier acheived the near perfect metrics of accuracy = 95.12%, F1-Score of 93.3% coupled with ROC of 0.98. This is the ideal model for this problem. We should be mindfull that these results are based on the mini dataset and when we try to use it with a larger dataset the results could vary and those needs to be addressed as required. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given the dataset is very small, it is a good idea to look at working on the full dataset. In this case, the things to be considered are the set of metrics to be used for evaluating the model performance. Check if the full dataset is imbalanced / not, consider appropriate models for evaluation based on this and then decide the hyper parameters for optimization. It is very much possible that on the new data set, a different model performs better (for eg Logictic regression) compared to the random forest classifier with the current small dataset. "
    ]
   },
   {
